# xdg-launcher

./: .gitreview  CMakeLists.txt  README.txt
package/hvac/: config.xml  runxdg.toml
package/navi/: config.xml  runxdg.toml
package/simple-egl/: config.xml  runxdg.toml
package/video/: config.xml  runxdg.toml
package/webbrowser/: config.xml  runxdg.toml
src/: runxdg.cpp  runxdg.hpp
